--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ egui = "0.30.0"
 rfd = "0.15.2"
 rodio = "0.20.1"
 eframe = "0.24"
+symphonia = { version = "0.5.3", features = ["mp3", "aac", "flac", "isomp4", "ogg", "vorbis"] }
+image = "0.24"
+id3 = "1.7"
